<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id = "@+id/chats"
        android:title = "@string/chats"
        android:icon="@drawable/ic_chats_24dp"/>
    <item
        android:id = "@+id/discover"
        android:title = "@string/discover"
        android:icon="@drawable/ic_discover_24dp"/>
    <item
        android:id = "@+id/explore"
        android:title = "@string/explore"
        android:icon="@drawable/ic_explore_24dp"/>
    <!--item
        android:id = "@+id/friends"
        android:title = "@string/friends"
        android:icon="@drawable/ic_friends_24dp"/-->
    <item
        android:id = "@+id/profile"
        android:title = "@string/profile"
        android:icon="@drawable/ic_profile_24dp"/>

</menu>